--- a/frontend/app/views/search/_filter.html.erb
+++ b/frontend/app/views/search/_filter.html.erb
@@ -20,6 +20,18 @@
   </div>
 <% end %>
 
+<%= form_tag(params_for_search, :method => :get) do %>
+  <div class="input-append" style="width:100%">
+    <% params_for_search.reject{|k, v| k === "q"}.each do |k, v| %>
+      <%= hidden_field_tag k, v %>
+    <% end %>
+    <input type="text" placeholder="<%= I18n.t("search_results.text_placeholder") %>" name="q" value="<%= params[:q] %>"/>
+    <div class="btn-group">
+      <button class="btn"><span class=" icon-search"></span></button>
+    </div>
+  </div>
+<% end %>
+
 <% @search_data.facets_for_filter.each do |facet_group, facets| %>
   <h5><%= I18n.t("search_results.filter.#{facet_group}", :default => facet_group) %></h5>
   <ul>
