--- a/frontend/app/views/digital_objects/_toolbar.html.erb
+++ b/frontend/app/views/digital_objects/_toolbar.html.erb
@@ -12,6 +12,9 @@
           <div class="btn-group">
             <%= link_to I18n.t("actions.export_mets"), {:controller => :exports, :action => :download_mets, :id => @digital_object.id}, :class => "btn btn-small" %>
           </div>
+          <div class="btn-group">
+            <%= link_to I18n.t("actions.export_dc"), {:controller => :exports, :action => :download_dc, :id => @digital_object.id}, :class => "btn btn-small" %>
+          </div>
         </div>
       </div>
     </div>
