--- a/frontend/app/views/resources/_toolbar.html.erb
+++ b/frontend/app/views/resources/_toolbar.html.erb
@@ -9,6 +9,9 @@
           <div class="btn-group">
             <%= link_to I18n.t("actions.export_ead"), {:controller => :exports, :action => :download_ead, :id => @resource.id}, :class => "btn btn-small" %>
           </div>
+          <div class="btn-group">
+            <%= link_to I18n.t("actions.export_marc"), {:controller => :exports, :action => :download_marc, :id => @resource.id}, :class => "btn btn-small" %>
+          </div>
         </div>
       </div>
     </div>
