When deleting an Accession, flag this with the listing in case the indexer hasn't yet removed it - if still present the listing will mark it as deleted

--- a/frontend/app/assets/stylesheets/archivesspace/tables.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tables.less
@@ -6,6 +6,9 @@ table {
   thead {
     #gradient > .vertical(@navbarBackgroundHighlight, @navbarBackground);
   }
+  tr.deleted td {
+    background-color: @errorBackground !important;
+  }
 }
 
 table.table-sortable {
