--- a/frontend/app/views/search/_filter.html.erb
+++ b/frontend/app/views/search/_filter.html.erb
@@ -22,10 +22,16 @@
   </div>
 <% end %>
 
-<%= form_tag(params_for_search, :method => :get) do %>
+<%= form_tag({}, :method => :get) do %>
   <div class="input-append" style="width:100%">
     <% params_for_search.reject{|k, v| k === "q"}.each do |k, v| %>
-      <%= hidden_field_tag k, v %>
+      <% if v.kind_of? Array %>
+        <% v.each do |val| %>
+          <%= hidden_field_tag "#{k}[]", val %>
+        <% end %>
+      <% else %>
+        <%= hidden_field_tag k, v %>
+      <% end %>
     <% end %>
     <input type="text" placeholder="<%= I18n.t("search_results.text_placeholder") %>" name="q" value="<%= params[:q] %>"/>
     <div class="btn-group">
