Add created_time and last_modified to the json object as readonly attributes and also index these values; change how the create/modified time values are set in the ASModel

--- a/frontend/app/assets/stylesheets/archivesspace/tables.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tables.less
@@ -9,6 +9,9 @@ table {
   tr.deleted td {
     background-color: @errorBackground !important;
   }
+  dl {
+    margin: 0;
+  }
 }
 
 table.table-sortable {
