--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -10,8 +10,7 @@
       <th class="sortable <% if @search_data.sorted_by === "title_sort"%>sort-<%= @search_data.current_sort_direction %><% end %>">
         <%= link_to I18n.t("search_results.result_title"), params_for_search("sort" => @search_data.sort_filter_for("title_sort")) %>
       </th>
-      <!-- <th class="table-audit-cell sortable"><%= I18n.t("search_results.modified") %></th>
-      <th class="table-audit-cell sortable"><%= I18n.t("search_results.created") %></th>-->
+      <th width="160px"></th>
       <th width="70px"><!-- actions --></th>
     </tr>
     </thead>
@@ -31,8 +30,16 @@
           <% if deleted %><span class="label label-important"><%= I18n.t("states.deleted") %></span><% end %>
           <%=  result["title"] || result['display_string'] %>
         </td>
-        <!-- <td></td>
-        <td></td> -->
+        <td>
+          <small>
+            <dl>
+              <dt><%= I18n.t("search_results.created") %></dt>
+              <dd><%= Time.parse(result['create_time']).getlocal %></dd>
+              <dt><%= I18n.t("search_results.modified") %></dt>
+              <dd><%= Time.parse(result['last_modified']).getlocal %></dd>
+            </dl>
+          </small>
+        </td>
         <td>
           <% if not deleted %>
             <div class="btn-group" style="float: right">
