--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -269,3 +269,36 @@ h4 > .context-help {
     cursor: pointer;
   }
 }
+
+/* inset label */
+.inset-label {
+  padding: 0 10px;
+  height: 30px;
+  display: inline-block;
+  margin: 5px 0 -5px !important;
+  .box-shadow(~"inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15)");
+  .border-radius(4px 0 0 4px);
+  #font > .sans-serif(13px, normal, 30px);
+  margin-bottom: 0;
+  background-color: #e9e9e9;
+  overflow: hidden;
+  max-width: 200px;
+  box-shadow: inset -2px 0px 3px #CCC;
+
+  .repository-label, .user-label {
+    max-width: 100px;
+    overflow: hidden;
+    display: inline-block;
+  }
+}
+
+.record-pane .inset-label {
+  margin: 0 !important;
+  height: 22px;
+  line-height: 22px;
+  font-size: 12px;
+}
+
+.btn-mini > .caret {
+  margin-top: 8px;
+}
