--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -472,7 +472,7 @@ ul.subrecord-form-list {
   }
 
   .mixed-content-help {
-    background-color: #EEE;
+    background-color: #F6F6F6;
     text-shadow: 1px 1px 1px white;
     padding: 0 10px;
     font-size: 0.9em;
@@ -481,6 +481,23 @@ ul.subrecord-form-list {
     font-family: @baseFontFamily;
   }
 
+}
+
+.content-list {
+  .drag-handle.inline {
+    top: 5px !important;
+  }
+
+  .subrecord-form-fields {
+    background-color: #F6F6F6 !important;
+
+    > .CodeMirror {
+      border: none;
+      border-top: 1px solid @inputBorder;
+      margin: 35px 0 0 0;
+      .border-radius(0);
+    }
+  }
 }
 
 .CodeMirror-completions {
