--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -315,10 +315,10 @@ section {
   .border-radius(4px 0 0 4px);
   #font > .sans-serif(13px, normal, 30px);
   margin-bottom: 0;
-  background-color: #e9e9e9;
+  background-color: #F9F9F9;
   overflow: hidden;
   max-width: 200px;
-  box-shadow: inset -2px 0px 3px #CCC;
+  box-shadow: inset -1px 0px 3px #CCC;
 }
 
 .record-pane .inset-label {
