--- a/frontend/app/views/linked_agents/_template.html.erb
+++ b/frontend/app/views/linked_agents/_template.html.erb
@@ -1,6 +1,7 @@
 <% define_template "accession_linked_agent", jsonmodel_definition(:accession, "linked_agents") do |form| %>
   <div class="subrecord-form-fields">
     <%= form.label_and_select("role", form.possible_options_for("role", true)) %>
+    <%= form.label_and_select("relator", form.possible_options_for("relator", true)) %>
     <%= render :partial => "agents/linker", :locals => {:form => form} %>
   </div>
 <% end %>
@@ -15,6 +16,7 @@
 <% define_template "resource_linked_agent", jsonmodel_definition(:resource, "linked_agents") do |form| %>
   <div class="subrecord-form-fields">
     <%= form.label_and_select("role", form.possible_options_for("role", true)) %>
+    <%= form.label_and_select("relator", form.possible_options_for("relator", true)) %>
     <%= render :partial => "agents/linker", :locals => {:form => form} %>
   </div>
 <% end %>
@@ -22,6 +24,7 @@
 <% define_template "archival_object_linked_agent", jsonmodel_definition(:archival_object, "linked_agents") do |form| %>
   <div class="subrecord-form-fields">
     <%= form.label_and_select("role", form.possible_options_for("role", true)) %>
+    <%= form.label_and_select("relator", form.possible_options_for("relator", true)) %>
     <%= render :partial => "agents/linker", :locals => {:form => form} %>
   </div>
 <% end %>
