Fix tree-loading-notice hidden being toolbar on read only tree views

--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -164,5 +164,6 @@
   text-align: center;
   padding-top: 1em;
   .opacity(95);
-  .box-shadow(3px 3px 10px rgba(0, 0, 0, 0.6))
+  .box-shadow(3px 3px 10px rgba(0, 0, 0, 0.6));
+  z-index: 1;
 }
