--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -31,14 +31,16 @@
           <%=  result["title"] || result['display_string'] %>
         </td>
         <td>
-          <small>
-            <dl>
-              <dt><%= I18n.t("search_results.created") %></dt>
-              <dd><%= Time.parse(result['create_time']).getlocal %></dd>
-              <dt><%= I18n.t("search_results.modified") %></dt>
-              <dd><%= Time.parse(result['last_modified']).getlocal %></dd>
-            </dl>
-          </small>
+          <% if result['create_time'] and result['last_modified'] %>
+            <small>
+              <dl>
+                <dt><%= I18n.t("search_results.created") %></dt>
+                <dd><%= Time.parse(result['create_time']).getlocal %></dd>
+                <dt><%= I18n.t("search_results.modified") %></dt>
+                <dd><%= Time.parse(result['last_modified']).getlocal %></dd>
+              </dl>
+            </small>
+          <% end %>
         </td>
         <td>
           <% if not deleted %>
