Fix deaccession extents i18n for extent type

--- a/frontend/app/views/deaccessions/_show.html.erb
+++ b/frontend/app/views/deaccessions/_show.html.erb
@@ -30,7 +30,7 @@
             <div class="span7">
               <% if deaccession["extents"].length > 0 %>
                 <%= deaccession["extents"][0]['number'] %>
-                <%= I18n.t('extent.extent_type_'+deaccession["extents"][0]['extent_type']) %>
+                <%= I18n.t('enumerations.extent_extent_type.'+deaccession["extents"][0]['extent_type']) %>
               <% end %>
             </div>
           </div>
