--- a/frontend/app/views/notes/_form.html.erb
+++ b/frontend/app/views/notes/_form.html.erb
@@ -8,8 +8,8 @@
       <ul class="dropdown-menu subrecord-selector">
         <li>
           <select>
-            <% all_note_types.keys.sort.each do |type| %>
-              <option value="<%= all_note_types[type] %>"><%= type %></option>
+            <% all_note_types.keys.sort_by {|type| I18n.t("note.types.#{type}")}.each do |type| %>
+              <option value="<%= all_note_types[type] %>"><%= I18n.t("note.types.#{type}") %></option>
             <% end %>
           </select>
         </li>
