Add public and internal only booleans to all note types and their forms; if a note is internal only, exclude it from the EAD output;

--- a/frontend/app/views/shared/_form_messages.html.erb
+++ b/frontend/app/views/shared/_form_messages.html.erb
@@ -50,6 +50,8 @@
 
        var _errors = <%= form.exceptions_for_js(@exceptions) %>;
 
+        console.log(_errors);
+
        var callback = function () {
          if (_errors.errors) {
            $(_errors.errors).each(function (idx, elt) {
