--- a/frontend/app/views/notes/_template.html.erb
+++ b/frontend/app/views/notes/_template.html.erb
@@ -47,6 +47,9 @@
       <%= form.label_and_select("type",
           singlepart_note_types.keys.map {|type| [I18n.t("note.types.#{type}"), type]},
           :field_opts => {:class => "note-type"}) %>
+      <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
+      <%= form.label_and_boolean("internal", {}, form.default_for("internal")) %>
+
       <% form.emit_template("content_items", :required => form.required?('content')) %>
     </div>
   </div>
@@ -59,6 +62,8 @@
       <%= form.hidden_input(:jsonmodel_type, "note_orderedlist") %>
       <%= form.label_and_textfield("title") %>
       <%= form.label_and_textfield("enumeration") %>
+      <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
+      <%= form.label_and_boolean("internal", {}, form.default_for("internal")) %>
 
       <div class="control-group">
         <label class="control-label"><%= I18n.t("note_orderedlist.items") %></label>
@@ -103,6 +108,8 @@
       <%= form.label_and_select("type",
           multipart_note_types.keys.map {|type| [I18n.t("note.types.#{type}"), type]},
           :field_opts => {:class => "note-type"}) %>
+      <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
+      <%= form.label_and_boolean("internal", {}, form.default_for("internal")) %>
 
       <% form.emit_template("content_items", :required => form.required?('content')) %>
 
@@ -143,6 +150,8 @@
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_definedlist") %>
       <%= form.label_and_textfield("title") %>
+      <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
+      <%= form.label_and_boolean("internal", {}, form.default_for("internal")) %>
 
       <section class="subrecord-form">
         <h5 class="subrecord-form-heading">
@@ -175,6 +184,8 @@
       <%= form.hidden_input(:jsonmodel_type, "note_index") %>
       <%= form.label_and_textfield("label") %>
       <% form.emit_template("content_items", :required => form.required?('content')) %>
+      <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
+      <%= form.label_and_boolean("internal", {}, form.default_for("internal")) %>
 
       <section class="subrecord-form">
         <h5 class="subrecord-form-heading">
@@ -208,6 +219,8 @@
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_chronology") %>
       <%= form.label_and_textfield("title") %>
+      <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
+      <%= form.label_and_boolean("internal", {}, form.default_for("internal")) %>
 
       <section class="subrecord-form">
         <h5 class="subrecord-form-heading">
@@ -257,6 +270,9 @@
     <div class="subrecord-form-container">
       <%= form.hidden_input(:jsonmodel_type, "note_bibliography") %>
       <%= form.label_and_textfield("label") %>
+      <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
+      <%= form.label_and_boolean("internal", {}, form.default_for("internal")) %>
+
       <% form.emit_template("content_items", :required => form.required?('content')) %>
 
       <div class="control-group">
@@ -299,6 +315,9 @@
       <%= form.label_and_select("type",
           digital_object_note_types.keys.map {|type| [I18n.t("note.types.#{type}"), type]},
           :field_opts => {:class => "note-type"}) %>
+      <%= form.label_and_boolean("publish", {}, form.default_for("publish")) %>
+      <%= form.label_and_boolean("internal", {}, form.default_for("internal")) %>
+
       <% form.emit_template("content_items", :required => form.required?('content')) %>
     </div>
   </div>
