--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -332,3 +332,49 @@ section {
 .text-filter-field {
   width: 80%;
 }
+
+.container {
+  .search-switcher {
+    list-style: none;
+    margin: 0;
+
+    a {
+      font-size: 0.85em;
+
+      &.hide {
+        display: none;
+      }
+    }
+
+    .active {
+      display: none;
+    }
+  }
+}
+
+.navbar {
+  .search-switcher a {
+    padding: 18px 5px  0 !important;
+  }
+}
+
+#simpleSearch form, #advancedSearch form {
+   margin-bottom: 5px;
+ }
+
+.advanced-search-container {
+  margin: 0;
+  padding: 19px;
+  background-color: @wellBackground;
+  border-left: 1px solid #CCC;
+  border-right: 1px solid #CCC;
+  border-bottom: 1px dotted #DDD;
+}
+
+.advanced-search {
+  margin: 0;
+
+  input, select, .btn {
+    width: 95%;
+  }
+}
