--- a/public/app/views/site/index.html.erb
+++ b/public/app/views/site/index.html.erb
@@ -1,28 +1,43 @@
 <%= setup_context :title => "Home", :suppress_breadcrumb => true %>
   <br/>
 
+<div class="well">
   <div class="row-fluid">
+    
     <div class="span8">
-      <div class="well">
-        <h3>Welcome to ArchivesSpace.</h3>
-        <p>Find what you're looking for:</p>
-        <%= form_tag(url_for(:controller => :site, :action => :search), :method => :get) do %>
-            <input type="text" class="input-large" style="margin: 0; height: 34px; font-size: 1.4em; width: 75%;" placeholder="<%= I18n.t("navbar.search_placeholder") %>" name="q" value="<%= params[:q] %>"/>
-            <button id="global-search-button" class="btn btn-large">Search</button>
-        <% end %>
+      
+      <h3>Welcome to ArchivesSpace.</h3>
+      <p>Find what you're looking for:</p>
+
+      <div class="tab-content">
+        <div id="simpleSearch" class="tab-pane active">
+          <%= render :partial => "simple_search" %>
+        </div>
+        <div id="advancedSearch" class="tab-pane">
+          <%= render :partial => "advanced_search" %>
+        </div>
       </div>
+
+      <ul class="search-switcher">
+        <li class="active">
+          <a href="#simpleSearch" data-toggle="tab">Hide Advanced Search</a>
+        </li>
+        <li>
+          <a href="#advancedSearch" data-toggle="tab">Show Advanced Search</a>
+        </li>
+      </ul>
+
     </div>
     <div class="span4">
       <h4>Content Here</h4>
-      <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-      </ul>
+      <p>Something here...</p>
+      <p>Something here...</p>
+      <p>Something here...</p>
       <hr/>
       <p>Something else...</p>
     </div>
   </div>
+</div>
   <div class="row-fluid">
     <div class="span12">
       <div class="well">
