Frontend changes for new file version records.

--- a/frontend/app/views/digital_objects/_form_container.html.erb
+++ b/frontend/app/views/digital_objects/_form_container.html.erb
@@ -19,6 +19,8 @@
 
   <% form.emit_template("digital_object") %>
 
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "file_versions"} %>
+
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
 
