--- a/frontend/app/views/digital_objects/_sidebar.html.erb
+++ b/frontend/app/views/digital_objects/_sidebar.html.erb
@@ -2,6 +2,10 @@
   <ul class="nav nav-list as-nav-list">
     <li><a href="#basic_information"><%= I18n.t("digital_object._html.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
 
+    <% if not controller.action_name === "show" or @digital_object.file_versions.length > 0 %>
+      <li><a href="#digital_object_file_versions_"><%= I18n.t("file_version._html.singular") %> <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if not controller.action_name === "show" or @digital_object.extents.length > 0 %>
       <li><a href="#digital_object_extents_"><%= I18n.t("extent._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
