WIP improve ability to hide advanced search form

--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -360,6 +360,10 @@ section {
 
 #simpleSearch form, #advancedSearch form {
    margin-bottom: 5px;
+
+   .search-switcher-hide {
+    display: none;
+   }
  }
 
 .advanced-search-container {
