--- a/public/app/views/site/_advanced_search.html.erb
+++ b/public/app/views/site/_advanced_search.html.erb
@@ -37,8 +37,14 @@
       <%=select_tag "scope_2", options_for_select(values_for_scope, params["scope_2"]) %>
     </div>
   </div>
+  <div class="span11">
+    <hr />
+  </div>
   <div class="span12">
-    <div class="span3 offset8">
+    <div class="span8">
+      <%= link_to I18n.t("advanced_search.index_switcher.hide"), { :advanced => nil }, {:class => "search-switcher-hide"} %>
+    </div>
+    <div class="span3">
       <button class="btn"><%= I18n.t("advanced_search.button_text") %></button>
     </div>
   </div>
