WIP: sorta kinda working a little bit

--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -41,6 +41,7 @@
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "external_documents"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "rights_statements"} %>
 <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "deaccessions"} %>
+<%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "collection_management"} %>
 
 <div class="form-actions">            
   <button type="submit" class="btn btn-primary"><%= I18n.t "actions.save_prefix" %> <%= I18n.t "accession._html.singular" %></button>
