--- a/frontend/app/views/digital_object_components/_form_container.html.erb
+++ b/frontend/app/views/digital_object_components/_form_container.html.erb
@@ -24,6 +24,7 @@
 
   <% form.emit_template("digital_object_component") %>
 
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "file_versions"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "dates"} %>
 
