--- a/frontend/app/views/digital_object_components/_show_inline.html.erb
+++ b/frontend/app/views/digital_object_components/_show_inline.html.erb
@@ -18,6 +18,10 @@
 
         </section>
 
+        <% if @digital_object_component.file_versions.length > 0 %>
+          <%= render :partial => "file_versions/show", :locals => { :file_versions => @digital_object_component.file_versions, :section_id => "digital_object_component_file_versions_" } %>
+        <% end %>
+
         <% if @digital_object_component.extents.length > 0 %>
           <%= render :partial => "extents/show", :locals => { :extents => @digital_object_component.extents, :section_id => "digital_object_component_extents_" } %>
         <% end %>
