--- a/frontend/app/views/digital_object_components/_sidebar.html.erb
+++ b/frontend/app/views/digital_object_components/_sidebar.html.erb
@@ -2,6 +2,10 @@
   <ul class="nav nav-list as-nav-list">
     <li><a href="#basic_information"><%= I18n.t("digital_object_component._html.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
 
+    <% if controller.action_name != "show" || @digital_object_component.file_versions.length > 0 %>
+      <li><a href="#digital_object_component_file_versions_"><%= I18n.t("file_version._html.singular") %> <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if controller.action_name != "show" || @digital_object_component.extents.length > 0 %>
       <li><a href="#digital_object_component_extents_"><%= I18n.t("extent._html.singular") %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
