WIP tweak query objects and public search form

--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -364,6 +364,10 @@ section {
    .search-switcher-hide {
     display: none;
    }
+
+    hr {
+      margin: 5px 0 0;
+    }
  }
 
 .advanced-search-container {
