--- a/public/app/views/site/_advanced_search.html.erb
+++ b/public/app/views/site/_advanced_search.html.erb
@@ -1,6 +1,6 @@
 <%
-  values_for_operator = ["AND", "OR", "NOT"].collect {|v| [I18n.t("advanced_search.operator.#{v}", :default => v), v]}
-  values_for_scope = ["keyword", "title", "creator", "scope", "contents"].collect {|v| [I18n.t("search_results.filter.#{v}", :default => v), v]}
+  values_for_operator = JSONModel(:boolean_query).schema['properties']['op']['enum'].collect {|v| [I18n.t("advanced_search.operator.#{v}", :default => v), v]}
+  values_for_scope = JSONModel(:field_query).schema['properties']['field']['enum'].collect {|v| [I18n.t("search_results.filter.#{v}", :default => v), v]}
 %>
 <%= form_tag(url_for(:controller => :site, :action => :advanced_search), :method => :get, :class => "advanced-search") do %>
   <%= hidden_field_tag "advanced", true %>
