--- a/frontend/app/views/shared/_subrecord_form.html.erb
+++ b/frontend/app/views/shared/_subrecord_form.html.erb
@@ -7,11 +7,13 @@
   js_template_name = "template_#{template}" if js_template_name.blank?
   custom_action_template = false if custom_action_template.blank?
   help_topic = form.help_path_for(name) if help_topic.blank?
+
+  cardinality = :zero_to_many if cardinality.blank?
 %>
 
 <%= render :partial=>template_erb, :locals => {:form => form} %>
 
-<section id="<%= section_id %>" class="subrecord-form" data-subrecord-form="true" data-object-name="<%= singular %>" data-template="<%= js_template_name %>" <% if custom_action_template %>data-custom-action="true"<% end %>>
+<section id="<%= section_id %>" class="subrecord-form" data-subrecord-form="true" data-object-name="<%= singular %>" data-template="<%= js_template_name %>" <% if custom_action_template %>data-custom-action="true"<% end %> data-cardinality="<%= cardinality %>">
 
   <<%= heading_size %> class="subrecord-form-heading">
     <%= I18n.t("#{singular}._html.plural") %>
@@ -24,8 +26,14 @@
   </<%= heading_size %>>
 
   <div class="subrecord-form-container">
-    <%= form.list_for(form[name], "#{name}[]") do |item| %>
-      <% form.emit_template(template, item) %>
+    <% if cardinality === :zero_to_one %>
+      <%= form.list_for([form[name]].compact, name) do |item| %>
+        <% form.emit_template(template, item) %>
+      <% end %>
+    <% else %>
+      <%= form.list_for(form[name], "#{name}[]") do |item| %>
+        <% form.emit_template(template, item) %>
+      <% end %>
     <% end %>
   </div>
 
