Rollback changes to JSONSchemaUtils#determine_schema_for so amiguious objects require a jsonmodel_type to be present; Add OR to the boolean_query; Add Clear button to the advanced search; Retain all advanved search params in the queary string so facets and sort actions retain query filters;

--- a/public/app/assets/stylesheets/archivesspace/common.less
+++ b/public/app/assets/stylesheets/archivesspace/common.less
@@ -368,6 +368,16 @@ section {
     hr {
       margin: 5px 0 0;
     }
+
+    .reset-advanced-search {
+      display: none;
+    }
+
+    &.advanced-search {
+      .btn {
+        width: 95%;
+      }
+    }
  }
 
 .advanced-search-container {
@@ -377,12 +387,23 @@ section {
   border-left: 1px solid #CCC;
   border-right: 1px solid #CCC;
   border-bottom: 1px dotted #DDD;
+
+  .btn-group {
+    width: 95%;
+  }
+
+  .btn-primary {
+    width: 75%;
+  }
+  .reset-advanced-search {
+    width: 15%;
+  }
 }
 
 .advanced-search {
   margin: 0;
 
-  input, select, .btn {
+  input, select {
     width: 95%;
   }
 }
